# angry-logger

./: .gitignore  README.md  pyproject.toml
angry_logger/: __init__.py  _const.py  logging.py
tests/: test_angry_logger.py
