[tool.poetry]
name = "angry-logger"
version = "1.0.1"
description = "Make your logging more passive agressive. Or just agressive agressive."
readme = 'README.md'
homepage = 'https://github.com/GitToby/angry-logger'
authors = ["Toby Devlin <toby@tobydevlin.com>"]
license = 'MIT'

[tool.poetry.urls]
"PyPi" = "https://pypi.org/project/angry-logger/"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
